tests/misc_tests/type_eq_ui_tests/projection_type-err.stderr
error[E0308]: mismatched types
 --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:4:5
  |
3 | fn flipper<L, R>(te: TypeEq<L, R>) -> TypeEq<L, R> {
  |            -  - found type parameter  ------------ expected `TypeEq<L, R>` because of return type
  |            |
  |            expected type parameter
4 |     te.flip()
  |     ^^^^^^^^^ expected `TypeEq<L, R>`, found `TypeEq<R, L>`
  |
  = note: expected struct `TypeEq<L, R>`
             found struct `TypeEq<R, L>`
  = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
  = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters
help: try removing the method call
  |
4 -     te.flip()
4 +     te
  |

error[E0308]: mismatched types
 --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:8:16
  |
7 | fn joiner_a<A, B, C>(first: TypeEq<A, B>, second: TypeEq<B, C>) -> TypeEq<A, B> {
  |                -  - found type parameter
  |                |
  |                expected type parameter
8 |     first.join(second)
  |           ---- ^^^^^^ expected `TypeEq<B, B>`, found `TypeEq<B, C>`
  |           |
  |           arguments to this method are incorrect
  |
  = note: expected struct `TypeEq<_, B>`
             found struct `TypeEq<_, C>`
  = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
  = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters
note: method defined here
 --> src/type_eq.rs
  |
  |         pub const fn join<O: ?Sized>(self: TypeEq<L, R>, _other: TypeEq<R, O>) -> TypeEq<L, O> {
  |                      ^^^^

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:12:24
   |
11 | fn joiner_b<A, B, C>(first: TypeEq<A, B>, second: TypeEq<C, B>) {
   |                -  - found type parameter
   |                |
   |                expected type parameter
12 |     let _ = first.join(second);
   |                   ---- ^^^^^^ expected `TypeEq<B, _>`, found `TypeEq<C, B>`
   |                   |
   |                   arguments to this method are incorrect
   |
   = note: expected struct `TypeEq<B, _>`
              found struct `TypeEq<C, B>`
   = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters
note: method defined here
  --> src/type_eq.rs
   |
   |         pub const fn join<O: ?Sized>(self: TypeEq<L, R>, _other: TypeEq<R, O>) -> TypeEq<L, O> {
   |                      ^^^^

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:16:5
   |
15 | fn in_ref_to_different_type<L, R>(te: TypeEq<L, R>) -> TypeEq<&'static u8, &'static u16> {
   |                             - this type parameter      --------------------------------- expected `TypeEq<&'static u8, &'static u16>` because of return type
16 |     te.in_ref()
   |     ^^^^^^^^^^^ expected `TypeEq<&u8, &u16>`, found `TypeEq<&L, &R>`
   |
   = note: expected struct `TypeEq<&'static u8, &'static u16>`
              found struct `TypeEq<&L, &R>`

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:20:5
   |
19 | fn in_mut_to_different_type<'a, L, R>(te: TypeEq<L, R>) -> TypeEq<&'a mut u8, &'a mut u16> {
   |                                 - this type parameter      ------------------------------- expected `TypeEq<&'a mut u8, &'a mut u16>` because of return type
20 |     te.in_mut()
   |     ^^^^^^^^^^^ expected `TypeEq<&mut u8, &mut u16>`, found `TypeEq<&mut L, &mut R>`
   |
   = note: expected struct `TypeEq<&'a mut u8, &'a mut u16>`
              found struct `TypeEq<&mut L, &mut R>`

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:24:5
   |
23 | fn map_to_different_type<'a, L, R>(te: TypeEq<L, R>) -> TypeEq<u8, u16> {
   |                                                         --------------- expected `TypeEq<u8, u16>` because of return type
24 |     te.map(Mapper)
   |     ^^^^^^^^^^^^^^ expected `TypeEq<u8, u16>`, found `TypeEq<[L; 1], [R; 1]>`
   |
   = note: expected struct `TypeEq<u8, u16>`
              found struct `TypeEq<[L; 1], [R; 1]>`

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:27:5
   |
26 | fn project_to_different_type<'a, L, R>(te: TypeEq<L, R>) -> TypeEq<u8, u16> {
   |                                                             --------------- expected `TypeEq<u8, u16>` because of return type
27 |     te.project::<Mapper>()
   |     ^^^^^^^^^^^^^^^^^^^^^^ expected `TypeEq<u8, u16>`, found `TypeEq<[L; 1], [R; 1]>`
   |
   = note: expected struct `TypeEq<u8, u16>`
              found struct `TypeEq<[L; 1], [R; 1]>`

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:30:5
   |
29 | fn unmap_to_different_type<'a, L, R>(te: TypeEq<[L; 1], [R; 1]>) -> TypeEq<u8, u16> {
   |                                - this type parameter                --------------- expected `TypeEq<u8, u16>` because of return type
30 |     te.unmap(Mapper)
   |     ^^^^^^^^^^^^^^^^ expected `TypeEq<u8, u16>`, found `TypeEq<L, R>`
   |
   = note: expected struct `TypeEq<u8, u16>`
              found struct `TypeEq<L, R>`

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:33:5
   |
32 | fn unproject_to_different_type<'a, L, R>(te: TypeEq<[L; 1], [R; 1]>) -> TypeEq<u8, u16> {
   |                                    - this type parameter                --------------- expected `TypeEq<u8, u16>` because of return type
33 |     te.unproject::<Mapper>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ expected `TypeEq<u8, u16>`, found `TypeEq<L, R>`
   |
   = note: expected struct `TypeEq<u8, u16>`
              found struct `TypeEq<L, R>`

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:53:5
   |
50 | fn in_array_to_different_type<'a, L, R>(
   |                                   - this type parameter
51 |     te: TypeEq<L, R>
52 | ) -> TypeEq<[u8; 1], [u16; 1]> {
   |      ------------------------- expected `TypeEq<[u8; 1], [u16; 1]>` because of return type
53 |     te.in_array(TypeEq::new::<Usize<1>>())
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `TypeEq<[u8; 1], [u16; 1]>`, found `TypeEq<[L; 1], [R; 1]>`
   |
   = note: expected struct `TypeEq<[u8; 1], [u16; 1]>`
              found struct `TypeEq<[L; 1], [R; 1]>`

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/projection_type-err.rs:61:17
   |
61 |     te.in_array(te_len)
   |        -------- ^^^^^^ expected `1`, found `A`
   |        |
   |        arguments to this method are incorrect
   |
   = note: expected struct `TypeEq<Usize<1>, Usize<1>>`
              found struct `TypeEq<Usize<A>, Usize<B>>`
note: method defined here
  --> src/type_eq.rs
   |
   |     pub const fn in_array<const UL: usize, const UR: usize>(
   |                  ^^^^^^^^
